# VGL-Vulkan-Core

./: .gitignore  CMakeLists.txt  README.md  StyleGuide.md
HLVBOs/: VulkanAsyncResourceHandle.cpp  VulkanAsyncResourceHandle.h  VulkanBufferGroup.cpp  VulkanBufferGroup.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanSwapChainBase.cpp  VulkanSwapChainBase.h  VulkanVertexArray.cpp  VulkanVertexArray.h
HLVBOs/win/: VulkanSwapChain.cpp  VulkanSwapChain.h
example/: Example.cpp  Example.h  ExampleModelData.h  ExampleRenderer.cpp  ExampleRenderer.h  LowLevelExample.cpp  LowLevelExample.h  VulkanTesting.cpp  VulkanTestingMac.h  VulkanTestingMac.mm
example/include/: readme.txt
example/include/shaderc/: readme.txt
example/lib/: readme.txt  shaderc_shared.lib
example/linux/: CMakeLists.txt  pch.h
example/mac/Example/: Info.plist
example/mac/Example.xcodeproj/: project.pbxproj
example/mac/Example.xcodeproj/xcshareddata/xcschemes/: VGL Vulkan Core Example.xcscheme
example/windows/: VulkanTesting.sln
example/windows/VulkanTesting/: Example.vcxproj  Example.vcxproj.filters  Resource.h  VulkanTesting.rc  VulkanTesting.vcxproj  VulkanTesting.vcxproj.filters  pch.h
example/windows/VulkanTesting/glsl/: cubemap.frag  cubemap.vert  frag.spv  lighting.frag  lighting.frag.spv  lighting.vert  lighting.vert.spv  lightingTex.frag  lightingTex.frag.spv  lightingTex.vert  lightingTex.vert.spv  test.frag  test.vert  vert.spv
src/: MatTypes.h  SequentialIdentifier.cpp  SequentialIdentifier.h  ShaderUniformTypeEnums.h  VecTypes.cpp  VecTypes.h  VulkanAsyncResourceHandle.cpp  VulkanAsyncResourceHandle.h  VulkanBufferGroup.cpp  VulkanBufferGroup.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanExtensionLoader.cpp  VulkanExtensionLoader.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineState.cpp  VulkanPipelineState.h  VulkanPipelineStateCache.cpp  VulkanPipelineStateCache.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertexArray.cpp  VulkanVertexArray.h  vglcore.h
src/os/: VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSwapChainBase.cpp  VulkanSwapChainBase.h
src/os/linux/: VulkanSurface.cpp  VulkanSurface.h  VulkanSurfaceXcb.cpp  VulkanSurfaceXcb.h
src/os/mac/: VulkanSurface.h  VulkanSurface.mm  VulkanSwapChain.h  VulkanSwapChain.mm
src/os/win/: VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h
